<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="game"
            type="com.example.guessnumberfragment.data.Game"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/linearLayout"
        android:gravity="center"
        tools:context=".ui.ConfigActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/etNameMargin"
                android:hint="@string/etNameHint"
                android:text="" />

            <EditText
                android:id="@+id/etAttempts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/etAttemptsMargin"
                android:hint="@string/etAttemptsHint"
                android:inputType="number"
                android:maxLength="2"
                android:text="" />

        </LinearLayout>

        <Button
            android:onClick="sendData"
            android:id="@+id/btStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/btStartMargin"
            android:text="@string/btStart" />

    </LinearLayout>
</layout>